@@ -321,33 +321,15 @@ argument_list|(
 name|args
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|args
-operator|.
-name|get
-argument_list|(
-literal|"inject"
-argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
 name|inject
 operator|=
-name|Boolean
-operator|.
 name|getBoolean
 argument_list|(
-name|args
-operator|.
-name|get
-argument_list|(
 name|INJECT
-argument_list|)
+argument_list|,
+literal|true
 argument_list|)
 expr_stmt|;
-block|}
 name|String
 name|name
 init|=
